Layout for splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="title_activity_attractions">Attractions</string>
     <string name="title_activity_shopping">Shopping</string>
     <string name="title_activity_share">Share</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="dummy">Custom fonts in XML are easy</string>
+    <string name="loc">localé</string>
 </resources>
