Added info screen 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
     <string name="info1">Find...Capture...Post</string>
     <string name="info2">Locale helps you to find places that you never knew existed. Just...</string>
     <string name="ok">OK</string>
+    <string name="take">Take the journey</string>
+    <string name="find">Find the next cool restaurant, attraction or hotels near you. So...</string>
+    <string name="come">Come and take a look inside!!!</string>
 </resources>
