Modified splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="take">Take the journey</string>
     <string name="find">Find the next cool restaurant, attraction or hotels near you. So...</string>
     <string name="come">Come and take a look inside!!!</string>
+    <string name="next">Find the next cool spot</string>
 </resources>
