--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="next">Find the next cool spot</string>
     <string name="title_activity_add_locale">AddLocale</string>
     <string name="check">CHECK OUT THE LOCALE</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
