Added custom font to Splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="can">CANCEL</string>
     <string name="save">SAVE</string>
     <string name="takepho">TAKEPHOTO</string>
+    <string name="title">localé</string>
 </resources>
