--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="save">SAVE</string>
     <string name="takepho">TAKEPHOTO</string>
     <string name="title">localé</string>
+    <string name="title_activity_intro">Intro</string>
 </resources>
